2002-06-14  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* NEWS, configure.in: Bump version to 1.6.2.

2002-06-13  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix pr307.test failure with gcc 3.x.
	* lib/depcomp (dashmstdout): Strip the call to libtool, and
	replace `-o $object' by `-o /dev/null' before running "$@"
	to generate dependencies.
	(cpp): Strip the call to libtool as well as `-o $object'.

2002-06-12  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/depcomp (tru64): Expect dependency files in .libs/, maybe as
	$base.lo.d, when libtool is used.
	Reported by Nicolas Joly.

2002-06-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/java.am (class%DIR%.stamp): Don't run $(JAVAC) when there
	is no file to compile.
	* tests/java2.test: New file.
	* tests/Makefile.am (TESTS): Add java2.test.
	Reported by Braden N. McDaniel.

2002-06-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/maintclean.test: Don't check for autom4te.cache if
	it's not created by Autoconf.
	Reported by Bernd Jendrissek.

2002-06-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Tests): Document site.exp.  Update DejaGnu's url.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Bump version to 1.6.1c.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* NEWS, configure.in: Bump version to 1.6.1b.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/dollar.test: Require GNU make.
	* tests/maintclean.test: Don't use `export YACC=false'.  Pass
	YACC=false to configure instead.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/config.guess, lib/config.sub, lib/texinfo.tex, lib/INSTALL,
	INSTALL: New upstream versions.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/sinclude.test: Merge from HEAD.
	* automake.in (scan_one_autoconf_file): Prefix the sinclude
	regex with \b so we don't match anything ending in `sinclude'.
	Regognize m4_include, and include too.  Unquote the macro
	argument.
