@@ -1,4 +1,4 @@
 @set UPDATED 11 June 2002
 @set UPDATED-MONTH June 2002
-@set EDITION 1.6.2
-@set VERSION 1.6.2
+@set EDITION 1.6.2a
+@set VERSION 1.6.2a
