@@ -1,5 +1,9 @@
 2002-06-14  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* configure.in: Bump version to 1.6.2a.
+
+2002-06-14  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* NEWS, configure.in: Bump version to 1.6.2.
 
 2002-06-13  Alexandre Duret-Lutz  <duret_g@epita.fr>
